load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "batcher",
    srcs = ["batcher.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/batcher",
    visibility = ["//visibility:public"],
)

go_test(
    name = "batcher_test",
    srcs = ["batcher_test.go"],
    embed = [":batcher"],
)
