load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "exppath",
    srcs = [
        "exppath.go",
        "filter.go",
    ],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/io/exppath",
    visibility = ["//visibility:public"],
)

go_test(
    name = "exppath_test",
    srcs = ["filter_test.go"],
    deps = [":exppath"],
)
