load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "walker",
    srcs = [
        "filter.go",
        "queue.go",
        "walker.go",
    ],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/io/walker",
    visibility = ["//visibility:public"],
    deps = ["//go/pkg/io/exppath"],
)

go_test(
    name = "walker_test",
    srcs = [
        "filter_test.go",
        "walker_test.go",
    ],
    deps = [
        ":walker",
        "//go/pkg/io/exppath",
    ],
)
